<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#eeeeee"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_title"
        android:id="@+id/company_name"
        android:textSize="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_address"
        android:layout_below="@+id/company_name"
        android:id="@+id/address"
        android:textSize="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_info"
        android:layout_below="@+id/address"
        android:id="@+id/info"
        android:textSize="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:text="@string/phone"
        android:layout_alignParentRight="true"
        android:id="@+id/phone"
        android:textSize="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pan_no_info"
        android:text="PAN NO."
        android:textSize="10dp"
        android:layout_below="@+id/phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pan_no_no"
        android:text="1231123123"
        android:textSize="10dp"
        android:layout_alignTop="@+id/pan_no_info"
        android:layout_toRightOf="@+id/pan_no_info"
        android:layout_toEndOf="@+id/pan_no_info" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mr/Mrs"
        android:textSize="10dp"
        android:layout_below="@+id/pan_no_no"
        android:id="@+id/mr"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mr_name"
        android:textSize="10dp"
        android:text="name manandhar"
        android:layout_marginLeft="4dp"
        android:layout_alignTop="@+id/mr"
        android:layout_toRightOf="@+id/mr"
        android:layout_toEndOf="@+id/mr" />
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bill_no"
        android:textSize="10dp"
        android:layout_below="@+id/mr"
        android:text="No."
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="no"
        android:textSize="10dp"
        android:layout_marginRight="4dp"
        android:layout_alignTop="@+id/bill_no"
        android:layout_toRightOf="@+id/bill_no"
        android:layout_toEndOf="@+id/bill_no"
        android:id="@+id/no_no"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date:"
        android:textSize="10dp"
        android:layout_below="@id/bill_no"
        android:id="@+id/ldate"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ldate"
        android:layout_toRightOf="@+id/ldate"
        android:layout_toEndOf="@+id/ldate"
        android:text="date"
        android:textSize="10dp"
        android:layout_marginLeft="4dp"
        android:id="@+id/indate"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Date:"
        android:textSize="10dp"
        android:layout_below="@id/indate"
        android:id="@+id/lorder_date"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:textSize="10dp"
        android:layout_alignTop="@+id/lorder_date"
        android:layout_toRightOf="@+id/lorder_date"
        android:layout_toEndOf="@+id/lorder_date"
        android:text="orderdate"
        android:id="@+id/inorder_date"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        android:layout_below="@+id/inorder_date"
        android:id="@+id/line"
        android:textSize="10dp"
        android:layout_margin="4dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/topbar"
        android:textSize="10dp"
        android:layout_below="@+id/line"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="particular"
            android:textSize="8sp"
            android:background="#A9A9A9"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Weight"
            android:textSize="8sp"
            android:background="#A9A9A9"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="8sp"
            android:layout_height="wrap_content"
            android:text="Wastage"
            android:background="#A9A9A9"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Making"
            android:textSize="8sp"
            android:background="#A9A9A9"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="8sp"
            android:layout_height="wrap_content"
            android:text="Rate"
            android:background="#A9A9A9"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Discount"
            android:textSize="8sp"
            android:layout_marginRight="2dp"
            android:background="#A9A9A9"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Total"
            android:textSize="8sp"
            android:background="#A9A9A9"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="8sp"
        android:layout_below="@+id/topbar"
        android:id="@+id/below_bar"
        android:background="#e0e0e0"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="particular"
            android:textSize="8sp"
            android:background="#e0e0e0"
            android:layout_marginRight="2dp"
            android:id="@+id/inparticular"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Weight"
            android:textSize="8sp"
            android:background="#e0e0e0"
            android:layout_marginRight="2dp"
            android:id="@+id/inweight"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="8sp"
            android:layout_height="wrap_content"
            android:text="Wastage"
            android:id="@+id/inwastage"
            android:background="#e0e0e0"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="8sp"
            android:id="@+id/inmaking"
            android:layout_height="wrap_content"
            android:text="Making"
            android:background="#e0e0e0"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="10dp"
            android:id="@+id/inrate"
            android:layout_height="wrap_content"
            android:text="Rate"
            android:background="#e0e0e0"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="8sp"
            android:text="Discount"
            android:id="@+id/indiscount"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="8sp"
            android:layout_height="wrap_content"
            android:text="Total"
            android:id="@+id/intotal"
            android:background="#e0e0e0"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        android:layout_below="@+id/below_bar"
        android:id="@+id/line1"
        android:textSize="8sp"
        android:layout_margin="4dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line1"
        android:id="@+id/note_section"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="8sp"
            android:layout_weight="3"
            android:id="@+id/notes"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="0dp"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:text="name"
            android:id="@+id/name_section"
            android:layout_weight="1"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/stamp"
        android:layout_below="@+id/note_section"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="30dp"
        android:id="@+id/imageView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Signature"
        android:textSize="10sp"
        android:layout_above="@+id/imageView"
        android:layout_toLeftOf="@+id/phone"
        android:layout_toStartOf="@+id/phone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_section"
        android:text="@string/notes2"
        android:textSize="8sp"
        android:layout_marginTop="-7dp"
        android:id="@+id/asd"
        />
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/asd"
        android:layout_marginTop="10dp"
        android:id="@+id/image_view"
        />
</RelativeLayout>